--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
             <div class="second-segment">
                 <h2 class="game">Amenti</h2>
-                <p class="description"></p>r
+                <p class="description"></p>
             </div>
             <div class="third-segment">
                 <h3 class=""rating>3.75</h3>
