add styles to all segments

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <p class="description"></p>
             </div>
             <div class="third-segment">
-                <h3 class=""rating>7.75</h3>
+                <h3 class="rating">7.75</h3>
             </div>
         </div>
 
