add description field style

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
             <div class="second-segment">
                 <h2 class="game">Bad Parenting</h2>
-                <p class="description"></p>
+                <p class="description">Played on <a href="https://www.twitch.tv/videos/2367419398?t=1h48m8s">We're Finding The Scariest Games Out There And Playing Them All - Come Join And Give Me a Rec!</a></p>
             </div>
             <div class="third-segment">
                 <h3 class="rating">7.75</h3>
