add descriptions to each entry

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
             <div class="second-segment">
                 <h2 class="game">Welcome Home</h2>
-                <p class="description"></p>
+                <p class="description">Played on <a href="https://www.twitch.tv/videos/2367419398?t=1h48m8s">We're Finding The Scariest Games Out There And Playing Them All - Come Join And Give Me a Rec!</a></p>
             </div>
             <div class="third-segment">
                 <h3 class=""rating>5.5</h3>
@@ -57,7 +57,7 @@
             </div>
             <div class="second-segment">
                 <h2 class="game">Pretend It's Not There</h2>
-                <p class="description"></p>
+                <p class="description">Played on <a href="https://www.twitch.tv/videos/2367419398">We're Finding The Scariest Games Out There And Playing Them All - Come Join And Give Me a Rec!</a></p>
             </div>
             <div class="third-segment">
                 <h3 class=""rating>4.5</h3>
@@ -73,7 +73,7 @@
             </div>
             <div class="second-segment">
                 <h2 class="game">Amenti</h2>
-                <p class="description"></p>
+                <p class="description">Played on <a href="https://www.twitch.tv/videos/2367419398">We're Finding The Scariest Games Out There And Playing Them All - Come Join And Give Me a Rec!</a></p>
             </div>
             <div class="third-segment">
                 <h3 class=""rating>3.75</h3>
