--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <label for="scrollbox">Scroll</label>
 
     <!-- List of media rating entries (manually ordered from highest to lowest) -->
-	<div class="list">
+    <div class="list">
         <div class="standard-dialog entry">
             <div class="window-pane first-segment">
                 <div class="title-bar">
@@ -31,6 +31,23 @@
                 <h3 class="rating">7.75</h3>
             </div>
         </div>
+
+	<div class="standard-dialog entry">
+            <div class="window-pane first-segment">
+                <div class="title-bar">
+                    <h1 class="title">Game</h1>
+                </div>
+                <img class="media-art" src="assets/media art/Wizard101.webp"r/>
+            </div>
+            <div class="second-segment">
+                <h2 class="game">Wizard101</h2>
+                <p class="description">I think it's a good 7 ish.<br>the nostalgia of playing it as a kid def helps a lot</p>
+            </div>
+            <div class="third-segment">
+                <h3 class="rating">7</h3>
+            </div>
+        </div>
+
 
         <div class="standard-dialog entry">
             <div class="window-pane first-segment">
