--- a/index.html
+++ b/index.html
@@ -32,6 +32,23 @@
             </div>
         </div>
 
+        <div class="standard-dialog entry">
+            <div class="window-pane first-segment">
+                <div class="title-bar">
+                    <h1 class="title">Game</h1>
+                </div>
+                <img class="media-art" src="assets/media art/Get To Work.webp"r/>
+            </div>
+            <div class="second-segment">
+                <h2 class="game">Get To Work</h2>
+                <p class="description">Played on <a href="https://www.twitch.tv/conmanoman/v/2419007597">I Know It's The Weekend But It's Time To Get To Work !!! - I Won't Rage And Any Time I Do I'll Gift Subs</a><br><br>was a very fun game, I'd say a good 7.5 or 8</p>
+            </div>
+            <div class="third-segment">
+                <h3 class="rating">7.75</h3>
+            </div>
+        </div>
+
+
 	<div class="standard-dialog entry">
             <div class="window-pane first-segment">
                 <div class="title-bar">
