fix silly typos

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="title-bar">
                     <h1 class="title">Game</h1>
                 </div>
-                <img class="media-art" src="assets/media art/Bad Parenting.webp"r/>
+                <img class="media-art" src="assets/media art/Bad Parenting.webp"/>
             </div>
             <div class="second-segment">
                 <h2 class="game">Bad Parenting</h2>
@@ -37,7 +37,7 @@
                 <div class="title-bar">
                     <h1 class="title">Game</h1>
                 </div>
-                <img class="media-art" src="assets/media art/Get To Work.webp"r/>
+                <img class="media-art" src="assets/media art/Get To Work.webp"/>
             </div>
             <div class="second-segment">
                 <h2 class="game">Get To Work</h2>
@@ -54,7 +54,7 @@
                 <div class="title-bar">
                     <h1 class="title">Game</h1>
                 </div>
-                <img class="media-art" src="assets/media art/Wizard101.webp"r/>
+                <img class="media-art" src="assets/media art/Wizard101.webp"/>
             </div>
             <div class="second-segment">
                 <h2 class="game">Wizard101</h2>
@@ -78,7 +78,7 @@
                 <p class="description">Played on <a href="https://www.twitch.tv/videos/2367419398?t=1h48m8s">We're Finding The Scariest Games Out There And Playing Them All - Come Join And Give Me a Rec!</a></p>
             </div>
             <div class="third-segment">
-                <h3 class=""rating>5.5</h3>
+                <h3 class="rating">5.5</h3>
             </div>
         </div>
 
@@ -94,7 +94,7 @@
                 <p class="description">Played on <a href="https://www.twitch.tv/videos/2367419398">We're Finding The Scariest Games Out There And Playing Them All - Come Join And Give Me a Rec!</a></p>
             </div>
             <div class="third-segment">
-                <h3 class=""rating>4.5</h3>
+                <h3 class="rating">4.5</h3>
             </div>
         </div>
 
@@ -110,7 +110,7 @@
                 <p class="description">Played on <a href="https://www.twitch.tv/videos/2367419398">We're Finding The Scariest Games Out There And Playing Them All - Come Join And Give Me a Rec!</a></p>
             </div>
             <div class="third-segment">
-                <h3 class=""rating>3.75</h3>
+                <h3 class="rating">3.75</h3>
             </div>
         </div>
     </div>
