add in progress w/ At Dead of Night

--- a/index.html
+++ b/index.html
@@ -21,6 +21,23 @@
                 <div class="title-bar">
                     <h1 class="title">Game</h1>
                 </div>
+                <img class="media-art" src="assets/media art/At Dead of Night.webp"/>
+            </div>
+            <div class="second-segment">
+                <h2 class="game">At Dead of Night</h2>
+                <img class="ongoing-game" src="assets/anims/fred-fred-mopping.gif"/>
+            </div>
+            <div class="third-segment">
+                <!-- <h3 class="rating">▶</h3> -->
+                <img class="ongoing-rating" src="assets/anims/loading-mac.gif"/>
+            </div>
+        </div>
+
+        <div class="standard-dialog entry">
+            <div class="window-pane first-segment">
+                <div class="title-bar">
+                    <h1 class="title">Game</h1>
+                </div>
                 <img class="media-art" src="assets/media art/Bad Parenting.webp"/>
             </div>
             <div class="second-segment">
