add entry-selected class

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <!-- List of media rating entries (manually ordered from highest to lowest) -->
     <div class="list">
-        <div class="standard-dialog entry">
+        <div class="standard-dialog entry entry-selected">
             <div class="window-pane first-segment">
                 <div class="title-bar">
                     <h1 class="title">Game</h1>
