--- a/index.html
+++ b/index.html
@@ -16,38 +16,6 @@
 
     <!-- List of media rating entries (manually ordered from highest to lowest) -->
     <div class="list">
-        <div class="standard-dialog entry entry-selected">
-            <div class="window-pane first-segment">
-                <div class="title-bar">
-                    <h1 class="title">Game</h1>
-                </div>
-                <img class="media-art" src="assets/media art/Gooing Up.webp"/>
-            </div>
-            <div class="second-segment">
-                <h2 class="game">Gooing Up!</h2>
-                <img class="ongoing-game" src="assets/anims/squidward-dance.gif"/>
-            </div>
-            <div class="third-segment">
-                <img class="ongoing-rating" src="assets/anims/loading-mac.gif"/>
-            </div>
-        </div>
-
-        <div class="standard-dialog entry">
-            <div class="window-pane first-segment">
-                <div class="title-bar">
-                    <h1 class="title">Game</h1>
-                </div>
-                <img class="media-art" src="assets/media art/At Dead of Night.webp"/>
-            </div>
-            <div class="second-segment">
-                <h2 class="game">At Dead of Night</h2>
-                <img class="ongoing-game" src="assets/anims/fred-fred-mopping.gif"/>
-            </div>
-            <div class="third-segment">
-                <img class="ongoing-rating" src="assets/anims/loading-mac.gif"/>
-            </div>
-        </div>
-
         <div class="standard-dialog entry">
             <div class="window-pane first-segment">
                 <div class="title-bar">
@@ -80,8 +48,23 @@
             </div>
         </div>
 
+        <div class="standard-dialog entry">
+            <div class="window-pane first-segment">
+                <div class="title-bar">
+                    <h1 class="title">Game</h1>
+                </div>
+                <img class="media-art" src="assets/media art/At Dead of Night.webp"/>
+            </div>
+            <div class="second-segment">
+                <h2 class="game">At Dead of Night</h2>
+                <p class="description">Played on <a href="https://www.twitch.tv/videos/2417210252?t=2h1m23s">We're playing a multitude of itch games tonight! Swing by and let me know a game or two I should try out.</a></p>
+            </div>
+            <div class="third-segment">
+                <h3 class="rating">7</h3>
+            </div>
+        </div>
 
-	<div class="standard-dialog entry">
+        <div class="standard-dialog entry">
             <div class="window-pane first-segment">
                 <div class="title-bar">
                     <h1 class="title">Game</h1>
@@ -97,6 +80,21 @@
             </div>
         </div>
 
+        <div class="standard-dialog entry entry-selected">
+            <div class="window-pane first-segment">
+                <div class="title-bar">
+                    <h1 class="title">Game</h1>
+                </div>
+                <img class="media-art" src="assets/media art/Gooing Up.webp"/>
+            </div>
+            <div class="second-segment">
+                <h2 class="game">Gooing Up!</h2>
+                <p class="description">Played on <a href="https://www.twitch.tv/videos/2429588559">WE'RE GIVING AWAY MONEY!!! - Just come in and say hi to enter - Newest rage game out there right now?</a></p>
+            </div>
+            <div class="third-segment">
+                <h3 class="rating">6</h3>
+            </div>
+        </div>
 
         <div class="standard-dialog entry">
             <div class="window-pane first-segment">
